syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/recurringinvoice/recurring_invoice_messages_description.proto";
import "avenue/financial/protobuf/customer/customer_messages_description.proto";



option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.recurringinvoicepayment";
option java_outer_classname = "RecurringInvoicePaymentMessagesDescriptionProto";

package avenue.financial.protobuf.recurringinvoicepayment;

message RecurringInvoicePaymentProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MetaProto meta = 2;
  avenue.financial.protobuf.core.MiniUserProto owner = 3;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 4;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 5;
  RecurringInvoicePaymentInfoProto invoice_payment_info = 6;

}

message RecurringInvoicePaymentInfoProto{
  avenue.financial.protobuf.recurringinvoice.RecurringInvoiceProto invoice = 1;
  avenue.financial.protobuf.customer.CustomerProto customer = 2;
  google.protobuf.StringValue date = 3;
  google.protobuf.DoubleValue amount = 4;
  google.protobuf.StringValue notes = 5;

}
message AddRecurringInvoicePaymentInfoProto{
  google.protobuf.StringValue invoice_id = 1;
  google.protobuf.StringValue customer_id = 2;
  google.protobuf.StringValue date = 3;
  google.protobuf.DoubleValue amount = 4;
  google.protobuf.StringValue notes = 5;

}
message AddRecurringInvoicePaymentProto{

  avenue.financial.protobuf.core.MiniUserProto owner = 1;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 2;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 3;
  AddRecurringInvoicePaymentInfoProto invoice_payment_info = 4;


}

message UpdateRecurringInvoicePaymentProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MiniUserProto owner = 2;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 3;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 4;
  AddRecurringInvoicePaymentInfoProto invoice_payment_info = 5;
}




